<resources>
    <string name="app_name">Weather Informer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="alert">Alert</string>
    <string name="settings">Settings</string>
    <string name="favourite">Favourite</string>
    <string name="map">Map</string>
    <string name="save">Save</string>
    <string name="alerts">Alerts</string>
    <string name="no_alerts">No Alerts</string>
    <string name="no_places">No Places</string>
    <string name="data_not_found">Check Your Internet Connection</string>
    <string name="pressure">Pressure</string>
    <string name="cloud">Cloudy</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind Speed</string>
    <string name="mostly_cloud">Mostly cloud</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="ok">OK</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="meter_sec">Meter / sec</string>
    <string name="mile_hour">Mile / Hour</string>
    <string name="notification">Notification</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="weather">Weather</string>
    <string name="now">Now</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="alarm">Alarm</string>
    <string name="set_time">Set Time</string>
    <string name="dismiss">Dismiss</string>
    <string name="please_enable_notifications_to_receive_important_updates_and_alerts">Please enable notifications to receive important updates and alerts.</string>
    <string name="LocationProvider">Location Provider</string>
    <string name="ApplyChangesbtn">Apply Changes</string>
    <string name="on">On</string>
    <string name="Off">Off</string>
</resources>