<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/alertFragment"
        android:name="com.example.weatherapp.UILayer.AlertScreen.View.alertFragment"
        android:label="@string/alert"
        tools:layout="@layout/fragment_alert" />
    <fragment
        android:id="@+id/favouriteFragment"
        android:name="com.example.weatherapp.UILayer.FavouritsScreen.View.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite">
        <action
            android:id="@+id/action_favourite_to_map"
            app:destination="@id/mapFragment" />
        <action
            android:id="@+id/action_favourite_to_home"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.weatherapp.UILayer.HomeScreen.View.homeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="map"
            android:defaultValue="mapp"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="obj"
            android:defaultValue="@null"
            app:argType="com.example.weatherapp.DataLayer.Model.DataModels.FavouriteLocationDto"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.weatherapp.UILayer.SettingScreen.View.settingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.weatherapp.UILayer.MapScreen.View.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_map_to_favourite"
            app:destination="@id/favouriteFragment" />
        <action
            android:id="@+id/action_map_to_home"
            app:destination="@id/homeFragment" />
        <argument
            android:name="fav"
            android:defaultValue="map"
            app:argType="string"
            app:nullable="true" />
    </fragment>
</navigation>